--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,19 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.47", features = ["derive"] }
+csv = "1.3.1"
+dashmap = "6.1.0"
+fantoccini = "0.22.0"
 futures = "0.3.31"
 itertools = "0.14.0"
 once_cell = "1.21.3"
-reqwest = { version = "0.12.23", features = ["rustls-tls"] }
+regex = "1.11.2"
+reqwest = { version = "0.12.23", features = ["cookies", "rustls-tls"] }
 scraper = "0.24.0"
+serde = "1.0.219"
 serde_json = "1.0.143"
+serde_urlencoded = "0.7.1"
+sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
 tokio = { version = "1.47.1", features = ["full"] }
+url = "2.5.7"
